alignment fix

--- a/newprotocol/newprotocol.css
+++ b/newprotocol/newprotocol.css
@@ -99,7 +99,7 @@ input[type=date] {
 }
 
 .needsIndent {
-    margin-left: 50px;
+    margin-left: 60px;
 
 }
 
